# hello-world-linux

./: CMakeLists.txt  README.md  main.c  start.c
standardLibrary/: Length.h  String.c  String.h  inputOutput.c  inputOutput.h
standardLibrary/system/: ArgumentCount.h  Buffer.h  ExitStatus.h  FileDescriptor.h  SignedSize.h  Size.h  systemCalls.h  systemCalls.s
